Декоративные элементы главной страницы (правки кроме inline svg)

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -15,7 +15,7 @@
   border: none;
   cursor: pointer;
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     &:hover {
       background-color: @basic_green-2;
     }
