--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -3,12 +3,12 @@
   margin-top: 36px;
   // padding: @mobile-padding;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     // padding: @tablet-padding;
     margin-top: 69px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     padding: 0;
     margin-top: 0;
   }
@@ -18,7 +18,7 @@
   padding: 58px 0 43px 0;
   background-color: @basic_green;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: flex;
     gap: 265px;
     justify-content: center;
@@ -27,7 +27,7 @@
     margin: 0 auto;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     width: 245px;
     box-sizing: border-box;
     display: block;
@@ -40,11 +40,11 @@
   display: block;
   margin: 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     margin: 0;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin: 0 auto;
   }
 }
@@ -58,12 +58,12 @@
   width: 165px;
   margin: 48px auto 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     text-align: left;
     margin: 0;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     text-align: center;
     margin: 46px auto 0 auto;
   }
