--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -8,13 +8,13 @@
   padding-top: 13px;
   padding-bottom: 19px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     padding: 27px 38px;
     border: 1px solid @special_grey;
     box-sizing: border-box;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     min-height: 72px;
     grid-template-columns: 325px 326px 245px;
     gap: 0;
@@ -32,7 +32,7 @@
   text-transform: uppercase;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 20px;
   }
@@ -43,12 +43,12 @@
   justify-content: space-between;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 20px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     display: grid;
     grid-template-columns: 244px 82px;
   }
@@ -71,7 +71,7 @@
 .card__button {
   width: 100%;
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     width: 245px;
     height: 40px;
     box-sizing: border-box;
