--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -13,13 +13,13 @@
   margin: 0 auto 0 auto;
   gap: 2px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     gap: 295px;
     padding: 0 70px;
     min-height: 200px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     gap: 87px;
     width: 570px;
     position: absolute;
@@ -39,7 +39,7 @@
   margin: 0;
   min-width: 135px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 21px;
     min-width: 165px;
@@ -54,20 +54,20 @@
   margin: 0;
   min-width: 140px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     min-width: 165px;
     font-size: 16px;
     line-height: 20px;
     text-align: end;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     text-align: start;
   }
 }
 
 .contacts__address span {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: block;
     margin-top: 19px;
   }
@@ -78,7 +78,7 @@
   width: 100%;
   height: 362px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     height: 400px;
   }
 }
