--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 20px 0 20px 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     width: auto;
     padding: 0;
   }
@@ -14,12 +14,12 @@
   align-items: center;
   text-decoration: none;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     justify-content: flex-end;
     gap: 22px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-content) {
     &:hover path {
       fill: @basic_green;
     }
