--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -3,7 +3,7 @@
   margin: 0;
   margin-top: 42px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     background-color: transparent;
     background-image: linear-gradient(to top, @special_grey-5 0, @special_grey-5 462px, transparent 462px, transparent 100%);
   }
@@ -14,13 +14,13 @@
   padding-bottom: 30px;
   margin: 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     padding: @tablet-padding;
     padding-bottom: 70px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
-    width: @desktop-width;
+  @media (min-width: @desktop) {
+    width: @desktop-content;
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-left: 0;
@@ -31,7 +31,7 @@
 .example__information-wrapper {
   padding: @mobile-padding;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     padding: 0;
   }
 }
@@ -42,7 +42,7 @@
   line-height: 40px;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
   }
@@ -56,25 +56,25 @@
   margin: 0;
   margin-top: 33px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 24px;
     margin-top: 61px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-top: 146px;
   }
 }
 
 .example__specification-result-wrapper {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: flex;
     gap: 167px;
     justify-content: center;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     display: block;
   }
 }
@@ -88,13 +88,13 @@
   margin: 0;
   margin-top: 25px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     justify-content: flex-start;
     gap: 42px;
     margin-top: 54px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-top: 69px;
   }
 }
@@ -104,7 +104,7 @@
   text-align: center;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     width: 162px;
   }
 }
@@ -118,7 +118,7 @@
   margin: 0;
   padding: 15px 0 18px 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 30px;
     line-height: 37px;
   }
@@ -134,7 +134,7 @@
   margin: -10px auto 0 auto;
   background-color: @special_grey-5;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 14px;
     line-height: 14px;
   }
@@ -146,13 +146,13 @@
   margin-top: 27px;
   text-transform: uppercase;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 20px;
     text-align: end;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-top: 50px;
     text-align: start;
   }
@@ -162,7 +162,7 @@
   margin: 0;
   margin-top: 42px;
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-bottom: 0;
     margin-top: auto;
   }
@@ -200,7 +200,7 @@
   margin: 0;
   padding: 3px 6px 3px 6px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: none;
   }
 }
@@ -236,13 +236,13 @@
   cursor: pointer;
   padding: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 30px;
     border-bottom: 1px dotted @special_grey-8;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     &:hover {
       border-bottom: 1px solid fade(@special_grey-8, 30%);
     }
@@ -259,7 +259,7 @@
   height: 6px;
   box-sizing: border-box;
 
-  @media (max-width: @mobile-width-only) {
+  @media (max-width: @mobile-max) {
     display: none;
   }
 }
@@ -294,7 +294,7 @@
   border: 1px solid @basic_grey;
   filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     &:hover {
       filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
     }
