--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -2,12 +2,12 @@
   padding: @mobile-padding;
   margin: 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     padding: @tablet-padding;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
-    width: @desktop-width;
+  @media (min-width: @desktop) {
+    width: @desktop-content;
     padding-left: 0;
     padding-right: 0;
   }
@@ -20,13 +20,13 @@
   margin: 0;
   margin-top: 27px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
     margin-top: 45px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-top: 71px;
   }
 }
@@ -40,7 +40,7 @@
   margin-top: 38px;
   padding: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 60px;
@@ -48,7 +48,7 @@
     margin-top: 72px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
   }
@@ -60,7 +60,7 @@
   align-items: center;
   gap: 20px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     flex-direction: column;
     align-items: stretch;
     gap: 31px;
@@ -71,7 +71,7 @@
 .information__number {
   display: none;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: block;
     position: absolute;
     top: -30px;
@@ -92,7 +92,7 @@
   justify-content: center;
   align-items: center;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     width: 80px;
     height: 80px;
   }
@@ -106,7 +106,7 @@
   margin: 0;
   max-width: 200px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 24px;
     max-width: 245px;
