--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -8,7 +8,7 @@
   padding: 20px 0 25px 0;
   border-bottom: 1px solid @special_grey-4;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     min-height: 511px;
     display: flex;
     gap: 0;
@@ -20,7 +20,7 @@
   &--last {
     display: block;
 
-    @media (min-width: @tablet-width) {
+    @media (min-width: @tablet) {
       display: flex;
       background-color: transparent;
       border: 2px solid @basic_grey;
@@ -35,7 +35,7 @@
 }
 
 .product-card__img-wrapper {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -47,7 +47,7 @@
   display: block;
   margin: auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     align-self: flex-end;
     margin: 0;
   }
@@ -61,7 +61,7 @@
   text-transform: uppercase;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     width: 155px;
     font-size: 20px;
     line-height: 24px;
@@ -70,7 +70,7 @@
     margin-top: 34px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     width: 145px;
     line-height: 21px;
   }
@@ -80,7 +80,7 @@
     text-align: center;
     margin-top: 23px;
 
-    @media (min-width: @tablet-width) {
+    @media (min-width: @tablet) {
       width: 135px;
       margin: 49px auto 0 auto;
       line-height: 22px;
@@ -97,7 +97,7 @@
   margin: 0;
   margin-top: 18px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 16px;
     margin-top: 21px;
     margin-bottom: 25px;
@@ -108,7 +108,7 @@
   margin: 0;
   padding: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     border-bottom: 1px solid @special_grey;
     padding: 8px 0 8px 0;
   }
@@ -119,7 +119,7 @@
   grid-column-start: 1;
   grid-column-end: 3;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     margin-bottom: 0;
     margin-top: auto;
   }
@@ -140,7 +140,7 @@
   display: block;
   margin: 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     margin-top: 52px;
   }
 }
@@ -154,7 +154,7 @@
   margin: 0;
   margin-top: 8px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     width: 170px;
     font-size: 16px;
     line-height: 18px;
