--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,7 +2,7 @@
   margin: 0 auto;
   position: relative;
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     min-height: 694px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -17,12 +17,12 @@
   padding: @mobile-padding;
   margin: 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     padding: @tablet-padding;
     padding-left: 197px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     width: 530px;
     padding-left: 0;
     padding-right: 0;
@@ -40,11 +40,11 @@
   z-index: -1;
   margin: 0;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     display: none;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     display: block;
     height: 100%;
     position: static;
@@ -60,14 +60,14 @@
   margin: 0;
   padding-top: 27px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
     color: @basic_black;
     text-align: left;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-left: 0;
   }
 }
@@ -81,7 +81,7 @@
   margin: 0;
   margin-top: 25px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 20px;
     color: @basic_black;
@@ -89,7 +89,7 @@
     margin-top: 41px;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     margin-left: 0;
   }
 }
@@ -100,13 +100,13 @@
   height: 270px;
   margin: 29px auto 0 auto;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     margin-top: -83px;
     order: 4;
     z-index: -1;
   }
 
-  @media (min-width: @desktop-breakpoint-width) {
+  @media (min-width: @desktop) {
     position: absolute;
     left: 50%;
     top: 250px;
@@ -122,7 +122,7 @@
   padding: 11px 0 11px 0;
   margin-top: 3px;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet) {
     margin: 47px auto 0 0;
   }
 }
