--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -28,19 +28,27 @@
   border-bottom: 1px solid @special_grey-4;
   margin: 0;
   padding: 25px 0 36px 0;
+  position: relative;
+  // width: 200px;
 
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
     padding: 68px 0 80px 0;
     border: none;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: @basic_green;
+      margin-right: 35px;
+    }
   }
 }
 
 .catalog-further__list {
-  outline: 2px solid @status_error;
-  outline-offset: -2px;
-
   @media (min-width: @desktop) {
     width: 896px;
   }
