--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -23,7 +23,7 @@
     gap: 87px;
     width: 570px;
     position: absolute;
-    top: 95px;
+    top: 181px;
     left: 50%;
     background-color: @basic_white;
     padding: 62px 89px 51px 76px;
@@ -77,8 +77,13 @@
   border: 0;
   width: 100%;
   height: 362px;
+  margin-bottom: -2px;
 
   @media (min-width: @tablet) {
     height: 400px;
+  }
+
+  @media (min-width: @desktop) {
+    margin-top: 86px;
   }
 }
