--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -37,14 +37,14 @@
     padding: 68px 0 80px 0;
     border: none;
 
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: @basic_green;
-      margin-right: 35px;
-    }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 2px;
+    //   background-color: @basic_green;
+    //   margin-right: 35px;
+    // }
   }
 }
 
