--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -21,6 +21,7 @@
 @special_grey-6: #D9D9D9;
 @special_grey-7: #E7E7E7;
 @special_grey-8: #C4C4C4;
+@special_grey-9: #BABABA;
 @special_dark-grey: #444444;
 @special_dark-grey-2: #222222;
 @status_error: #FF8282;
