Декоративные элементы внутренних страниц (на проверку)

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -47,7 +47,7 @@
   top: 20px;
   width: 24px;
   height: 18px;
-  background: url("../img/icon-main-nav-burger.svg");
+  background: url("../img/icon-main-nav-burger.svg") no-repeat;
 }
 
 .page-header__toggle--open {
@@ -57,7 +57,7 @@
   top: 20px;
   width: 20px;
   height: 20px;
-  background: url("../img/icon-main-nav-close.svg");
+  background: url("../img/icon-main-nav-close.svg") no-repeat;
 }
 
 .page-header__row-wrapper {
