--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -293,29 +293,94 @@
     height: 150px;
     resize: none;
   }
+
+  @media (min-width: @desktop) {
+    &:hover {
+      border-color: @special_grey;
+    }
+  }
+
+  &:focus {
+    outline: 2px solid @special_dark-grey;
+    outline-offset: -2px;
+    // border: 2px solid @special_dark-grey;
+  }
+
+  &:invalid {
+    outline-color: @status_error;
+  }
+
+  &:focus + svg line,
+  &:focus + svg path {
+    stroke: @basic_green;
+  }
+
+  &:invalid + svg line,
+  &:invalid + svg path {
+    stroke: @status_error;
+  }
 }
 
 .form__subtitle {
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
-  margin: 0 auto;
-  padding-left: 20px;
+  margin-left: 0;
+  padding: @mobile-padding;
+  width: min-content;
+  background-color: @basic_white;
+  white-space: nowrap;
 
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
     padding: @tablet-form-padding;
+    padding-left: 30px;
+    margin-left: 40px;
   }
 
   @media (min-width: @desktop) {
-    width: @desktop-content;
+    margin: 0 auto;
+    width: @desktop;
     padding: 0;
+    padding-left: 40px;
+    background-color: transparent;
+
+    &--contacts {
+      background-image: linear-gradient(to right, @basic_white 0, @basic_white 593px, transparent 593px, transparent 100%);
+    }
+
+    &--message {
+      background-image: linear-gradient(to right, @basic_white 0, @basic_white 259px, transparent 259px, transparent 100%);
+    }
+
+    &--optional {
+      background-image: linear-gradient(to right, @basic_white 0, @basic_white 292px, transparent 292px, transparent 100%);
+    }
   }
 
   & br {
     @media (min-width: @tablet) {
       display: none;
+    }
+  }
+}
+
+.form_subtitle-wrapper {
+  width: 100%;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    top: 16px;
+    background-color: @basic_green;
+    z-index: -1;
+
+    @media (min-width: @tablet) {
+      top: 20px;
     }
   }
 }
