Декоративные элементы внутренних страниц (на 2 проверку)

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -4,6 +4,7 @@
   min-height: 117px;
   box-sizing: border-box;
   border-bottom: 1px solid @special_grey-5;
+  border-top: 1px solid @special_grey-4;
   margin: 0;
   padding-top: 13px;
   padding-bottom: 19px;
