Декоративные элементы внутренних страниц (на 3 проверку)

--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -19,25 +19,18 @@
 }
 
 .catalog-further__title-wrapper {
-  .form__subtitle-wrapper;
+  .title-with-line-wrapper;
 }
 
 .catalog-further__title {
-  .form__subtitle;
-  font-weight: 400;
-  font-size: 24px;
+  .title-with-line;
   line-height: 24px;
-  text-align: left;
   margin-top: 25px;
   margin-bottom: 36px;
-  position: relative;
 
   @media (min-width: @tablet) {
-    font-size: 36px;
-    line-height: 36px;
     margin-top: 68px;
     margin-bottom: 80px;
-    border: none;
   }
 
   @media (min-width: @desktop) {
