--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "./common/fonts.less";
 @import "./common/variables.less";
 @import "./common/helpers.less";
+@import "./common/mixins.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
