--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -3,6 +3,7 @@
 @tablet-padding: 0 30px;
 @tablet-form-padding: 0 67px 0 70px;
 // width
+@mobile: 320px;
 @tablet: 768px;
 @mobile-max: 767px;
 @desktop-content: 1220px;
@@ -25,4 +26,4 @@
 @special_dark-grey: #444444;
 @special_dark-grey-2: #222222;
 @status_error: #FF8282;
-@special_green-1: rgba(104, 183, 56, 0.85);
+@special_green-1: rgba(104, 183, 56, 1);
