--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -60,6 +60,32 @@
     align-self: flex-end;
     margin: 0;
   }
+
+  &--small {
+    @media (min-width: @tablet) {
+      width: 161px;
+      height: 171px;
+    }
+  }
+
+  &--medium {
+    @media (min-width: @tablet) {
+      width: 163px;
+      height: 174px;
+    }
+  }
+
+  &--large {
+    @media (min-width: @tablet) {
+      width: 168px;
+      height: auto;
+    }
+
+    @media (min-width: @desktop) {
+      width: 172px;
+      height: auto;
+    }
+  }
 }
 
 .product-card__title {
@@ -156,6 +182,8 @@
 
   @media (min-width: @tablet) {
     margin-top: 52px;
+    width: 60px;
+    height: 60px;
   }
 }
 
